apps/media/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: media
  labels:
    app: navidrome
spec:
  selector:
    app: navidrome
  ports:
    - name: http
      port: 4533
      targetPort: 4533
  type: ClusterIP
